--- a/static/css/index.css
+++ b/static/css/index.css
@@ -2,6 +2,9 @@ body {
   font-family: 'Noto Sans', sans-serif;
 }
 
+.slider-item {
+  width: 384px !important;
+}
 
 .footer .icon-link {
     font-size: 25px;
